BookPage: fix mobile padding-top (100px) so widget top isn't cropped behind fixed header

--- a/src/BookPage.css
+++ b/src/BookPage.css
@@ -26,7 +26,7 @@ html[data-theme="dark"] .book-page__widget {
 
 @media (max-width: 768px) {
   .book-page {
-    padding-top: 64px;
+    padding-top: 100px;
   }
 }
 
